	Changes made between 1.0.3 (2018/06/13) and 1.1.x (TBD).

Merged yescrypt-opt.c and yescrypt-simd.c into one source file, which is
a closer match to -simd but is called -opt (and -simd is now gone).
With this change, performance of SIMD builds should be almost unchanged,
while scalar builds should be faster than before on register-rich 64-bit
architectures but may be slower than before on register-starved 32-bit
architectures (this shortcoming may be addressed later).  This also
happens to make SSE prefetch available even in otherwise-scalar builds
and it paves the way for adding SIMD support on big-endian architectures
(previously, -simd assumed little-endian).


	Changes made between 1.0.2 (2018/06/06) and 1.0.3 (2018/06/13).

In SMix1, optimized out the indexing of V for the sequential writes.


	Changes made between 1.0.1 (2018/04/22) and 1.0.2 (2018/06/06).

Don't use MAP_POPULATE anymore because new multi-threaded benchmarks on
RHEL6'ish and RHEL7'ish systems revealed that it sometimes has adverse
effect far in excess of its occasional positive effect.

In the SIMD code, we now reuse the same buffer for BlockMix_pwxform's
input and output in SMix2.  This might slightly improve cache hit rate
and thus performance.

Also in the SIMD code, a compiler memory barrier has been added between
sub-blocks to ensure that none of the writes into what was S2 during
processing of the previous sub-block are postponed until after a read
from S0 or S1 in the inline asm code for the current sub-block.  This
potential problem was never observed so far due to other constraints
that we have, but strictly speaking those constraints were insufficient
to guarantee it couldn't occur.


	Changes made between 1.0.0 (2018/03/09) and 1.0.1 (2018/04/22).

The included documentation has been improved, most notably adding new
text files PARAMETERS (guidelines on parameter selection, and currently
recommended parameter sets by use case) and COMPARISON (comparison to
scrypt and Argon2).
