@@ -82,8 +82,8 @@ yescrypt's drawbacks:
 
  - Not the PHC winner (Argon2 is), but is merely a "special recognition"
 
- - Out of major third-party libraries, yescrypt is currently only
-   included in libxcrypt (part of Fedora 29 and above)
+ - Supported in fewer third-party projects (as of this writing, there's
+   yescrypt support in libxcrypt, Linux-PAM, shadow, and mkpasswd)
 
 Other observations:
 
