@@ -1,5 +1,5 @@
 /*-
- * Copyright 2013-2018 Alexander Peslyak
+ * Copyright 2013-2018,2022 Alexander Peslyak
  * All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
@@ -21,8 +21,11 @@
 #ifdef __unix__
 #include <sys/mman.h>
 #endif
+#ifdef __linux__
+#include <linux/mman.h> /* for MAP_HUGE_2MB */
+#endif
 
-#define HUGEPAGE_THRESHOLD		(12 * 1024 * 1024)
+#define HUGEPAGE_THRESHOLD		(32 * 1024 * 1024)
 
 #ifdef __x86_64__
 #define HUGEPAGE_SIZE			(2 * 1024 * 1024)
@@ -33,18 +36,18 @@
 static void *alloc_region(yescrypt_region_t *region, size_t size)
 {
 	size_t base_size = size;
-	void *base, *aligned;
+	uint8_t *base, *aligned;
 #ifdef MAP_ANON
 	int flags =
 #ifdef MAP_NOCORE
 	    MAP_NOCORE |
 #endif
 	    MAP_ANON | MAP_PRIVATE;
-#if defined(MAP_HUGETLB) && defined(HUGEPAGE_SIZE)
+#if defined(MAP_HUGETLB) && defined(MAP_HUGE_2MB) && defined(HUGEPAGE_SIZE)
 	size_t new_size = size;
 	const size_t hugepage_mask = (size_t)HUGEPAGE_SIZE - 1;
 	if (size >= HUGEPAGE_THRESHOLD && size + hugepage_mask >= size) {
-		flags |= MAP_HUGETLB;
+		flags |= MAP_HUGETLB | MAP_HUGE_2MB;
 /*
  * Linux's munmap() fails on MAP_HUGETLB mappings if size is not a multiple of
  * huge page size, so let's round up to huge page size here.
@@ -56,7 +59,7 @@ static void *alloc_region(yescrypt_region_t *region, size_t size)
 	if (base != MAP_FAILED) {
 		base_size = new_size;
 	} else if (flags & MAP_HUGETLB) {
-		flags &= ~MAP_HUGETLB;
+		flags &= ~(MAP_HUGETLB | MAP_HUGE_2MB);
 		base = mmap(NULL, size, PROT_READ | PROT_WRITE, flags, -1, 0);
 	}
 
@@ -67,7 +70,7 @@ static void *alloc_region(yescrypt_region_t *region, size_t size)
 		base = NULL;
 	aligned = base;
 #elif defined(HAVE_POSIX_MEMALIGN)
-	if ((errno = posix_memalign(&base, 64, size)) != 0)
+	if ((errno = posix_memalign((void **)&base, 64, size)) != 0)
 		base = NULL;
 	aligned = base;
 #else
@@ -75,8 +78,8 @@ static void *alloc_region(yescrypt_region_t *region, size_t size)
 	if (size + 63 < size) {
 		errno = ENOMEM;
 	} else if ((base = malloc(size + 63)) != NULL) {
-		aligned = (uint8_t *)base + 63;
-		aligned = (uint8_t *)aligned - ((uintptr_t)aligned & 63);
+		aligned = base + 63;
+		aligned -= (uintptr_t)aligned & 63;
 	}
 #endif
 	region->base = base;
